src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Actual_Completion_Date__c</fullName>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BSTP_COACH_VISIT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BE/NL/FR - this field will be available for all countries Is being used to track if the manager accompanies the sales rep in the visit in the field.</description>
        <inlineHelpText>BE/NL/FR - this field will be available for all countries Is being used to track if the manager accompanies the sales rep in the visit in the field.</inlineHelpText>
        <label>Coaching Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BST_AGENDA_FOR_DISCUSSION__c</fullName>
        <description>Agenda Item to be discussed in the call.</description>
        <label>Agenda Item for Discussion</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BST_ASSOCIATED_CRITICAL_METRICS1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>BST - field used in order to associate the visit toward an active &quot;Goal Metric&quot;. Goals are filtered by country and by franchise and by record type</description>
        <inlineHelpText>BST - field used in order to associate the visit toward an active strategic goal. Goals are filtered by country and by franchise</inlineHelpText>
        <label>Associated Critical Metrics</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Critical_Goals__c.BST_ACTIVE__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.BST_COUNTRY__c</field>
                <operation>equals</operation>
                <valueField>Critical_Goals__c.BST_COUNTRY__c</valueField>
            </filterItems>
            <filterItems>
                <field>Critical_Goals__c.BST_RELATED_TO__c</field>
                <operation>equals</operation>
                <value>Events</value>
            </filterItems>
            <filterItems>
                <field>Critical_Goals__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Goal Metrics</value>
            </filterItems>
            <infoMessage>Goals Are Filtered based on Country, Main Product Category, Related Object (Events or Opportunities) and also they need to be active</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Critical_Goals__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BST_Associated_Critical_Metrics__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>BST - field used in order to associate Events with an active &quot;Lead Metrics or Lag Metrics.</description>
        <inlineHelpText>BST - field used in order to associate the Event to an active Lead Metric or Lag Metric goal Campaign.</inlineHelpText>
        <label>Associated Critical Metrics</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 5) AND 3 AND (4 OR 6)</booleanFilter>
            <errorMessage>Lookup Value does not exist or does not match filter criteria (Campaign fields: Active, Country, RecordType, or Type values)</errorMessage>
            <filterItems>
                <field>Campaign.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Campaign.RecordType.Name</field>
                <operation>equals</operation>
                <value>Lead Metrics</value>
            </filterItems>
            <filterItems>
                <field>$Source.BST_COUNTRY__c</field>
                <operation>equals</operation>
                <valueField>Campaign.BST_Country__c</valueField>
            </filterItems>
            <filterItems>
                <field>Campaign.Type</field>
                <operation>equals</operation>
                <value>Event</value>
            </filterItems>
            <filterItems>
                <field>Campaign.RecordType.Name</field>
                <operation>equals</operation>
                <value>Lag Metrics</value>
            </filterItems>
            <filterItems>
                <field>Campaign.Type</field>
                <operation>equals</operation>
                <value>Opportunity</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Critical Metric Events</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BST_BAX_FACILITATOR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the name of the user who will facilitate the training.</description>
        <label>Baxter Facilitator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BST_BAX_SALES_TEAM__c</fullName>
        <description>BST - field used to track the Main Product Category discussed in a call</description>
        <label>Main Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BST_COUNTRY__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Bax Company/Services</fullName>
                </value>
                <value>
                    <fullName>HC - Anesthesia/Critical Care</fullName>
                </value>
                <value>
                    <fullName>HC - BioSurgery</fullName>
                </value>
                <value>
                    <fullName>HC - Glob.Pharma Injectables</fullName>
                </value>
                <value>
                    <fullName>HC - Infusion Systems</fullName>
                </value>
                <value>
                    <fullName>HC - IV Therapies/SVP</fullName>
                </value>
                <value>
                    <fullName>HC - Nutrition</fullName>
                </value>
                <value>
                    <fullName>HC - Nutrition Pediatrics</fullName>
                </value>
                <value>
                    <fullName>HC - Pharmacy Services</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>RE - Acute</fullName>
                </value>
                <value>
                    <fullName>RE - Hemo Dialysis</fullName>
                </value>
                <value>
                    <fullName>RE - Peritoneal Dialysis</fullName>
                </value>
                <value>
                    <fullName>RE - Water Treatment</fullName>
                </value>
                <value>
                    <fullName>Small Volume Parenterals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_BEST_OUTCOME__c</fullName>
        <defaultValue>$Setup.DefaultEventValues__c.BST_BEST_OUTCOME__c</defaultValue>
        <description>The best outcome/conclusion came out from the call.</description>
        <label>Best Call Outcome</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BST_BOOST_Activity_ID__c</fullName>
        <displayFormat>A-{00000}</displayFormat>
        <label>BOOST Activity ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>BST_CALL_NOTES__c</fullName>
        <description>Notes taken from the call.</description>
        <label>Call Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BST_CALL_OBJ__c</fullName>
        <defaultValue>$Setup.DefaultEventValues__c.BST_CALL_OBJ__c</defaultValue>
        <description>Stores detail information about the objective of the call.</description>
        <label>Call Objectives</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BST_CALL_TYPE__c</fullName>
        <description>Stores information about the type of event to be chosen.</description>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AdBoard Meeting</fullName>
                </value>
                <value>
                    <fullName>AdProm Review</fullName>
                </value>
                <value>
                    <fullName>Baxter Customer Event (Medical)</fullName>
                </value>
                <value>
                    <fullName>Baxter field event</fullName>
                </value>
                <value>
                    <fullName>Baxter Internal Meeting</fullName>
                </value>
                <value>
                    <fullName>Calls Planning/Follow-up</fullName>
                </value>
                <value>
                    <fullName>Govt&apos; Official Contact</fullName>
                </value>
                <value>
                    <fullName>HCP Contact</fullName>
                </value>
                <value>
                    <fullName>Holiday/Leave</fullName>
                </value>
                <value>
                    <fullName>In Service</fullName>
                </value>
                <value>
                    <fullName>KOL Management</fullName>
                </value>
                <value>
                    <fullName>Medical Question Follow-up</fullName>
                </value>
                <value>
                    <fullName>Other Contact</fullName>
                </value>
                <value>
                    <fullName>Pre planned call</fullName>
                </value>
                <value>
                    <fullName>Presentations / Journal Clubs</fullName>
                </value>
                <value>
                    <fullName>Sector Alignment Meeting</fullName>
                </value>
                <value>
                    <fullName>Sickness Absence</fullName>
                </value>
                <value>
                    <fullName>Staff Meeting</fullName>
                </value>
                <value>
                    <fullName>Tenders/Contracts Preparation</fullName>
                </value>
                <value>
                    <fullName>Therapy/Products Education</fullName>
                </value>
                <value>
                    <fullName>Therapy Assistance</fullName>
                </value>
                <value>
                    <fullName>Third Party Congress</fullName>
                </value>
                <value>
                    <fullName>Third Party Congress (Medical)</fullName>
                </value>
                <value>
                    <fullName>Training Provided</fullName>
                </value>
                <value>
                    <fullName>Training Taken/Received</fullName>
                </value>
                <value>
                    <fullName>Trials</fullName>
                </value>
                <value>
                    <fullName>Trials Follow-up</fullName>
                </value>
                <value>
                    <fullName>Unplanned call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_COMP_INTLG_GATHERED__c</fullName>
        <description>BST - comments putted into this field will be automtically shared on chatter on the related Account and Parent Account (if applicable)</description>
        <label>Competitive Intelligence (CHATTER)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BST_COUNTRY__c</fullName>
        <description>Field to track the country.</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Dom Com</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_EVENT_SUBMISSION_DAYS__c</fullName>
        <description>BST- Field Created for reporting purpose to maintain the difference in number of days between today and Start date</description>
        <formula>IF(AND(TEXT(BST_STATUS__c) = &apos;Scheduled&apos;, OR(RecordType.DeveloperName = &apos;BST_Pre_Planned_Visit&apos;, RecordType.DeveloperName = &apos;BST_Field_Training_Activity&apos;)),IF(IsAllDayEvent, (TODAY() - ActivityDate) , (TODAY() - DATEVALUE(ActivityDateTime))),NULL)</formula>
        <label>Event Submission Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_EVNT_SUBMISSION_DATE__c</fullName>
        <description>BST - Field Used to track the date when the event was submitted</description>
        <formula>IF(AND(TEXT(BST_STATUS__c) = &apos;Scheduled&apos;, OR(RecordType.DeveloperName = &apos;BST_Pre_Planned_Visit&apos;, RecordType.DeveloperName = &apos;BST_Field_Training_Activity&apos;)) ,  
IF(IsAllDayEvent, (ActivityDate + VALUE($Label.BST_EVENT_SUBMISSION_DAYS)) , (DATEVALUE(ActivityDateTime) + VALUE($Label.BST_EVENT_SUBMISSION_DAYS))) , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>BST - Field Used to track the date when the event was submitted</inlineHelpText>
        <label>Event Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BST_EVNT_SUBMISSION_IND__c</fullName>
        <description>BST - Formula field used to display the submission status</description>
        <formula>IF(AND(TEXT(BST_STATUS__c) = &apos;Scheduled&apos;, OR(RecordType.DeveloperName = &apos;BST_Pre_Planned_Visit&apos;, RecordType.DeveloperName = &apos;BST_Field_Training_Activity&apos;)) , IF(IsAllDayEvent, IF((TODAY() - ActivityDate &gt; VALUE($Label.BST_EVENT_SUBMISSION_DAYS) - 2) , 
IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;red&quot;) , IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;green&quot;)) , 
IF((TODAY() - DATEVALUE(ActivityDateTime) &gt;  VALUE($Label.BST_EVENT_SUBMISSION_DAYS)  - 2) , 
IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;red&quot;) , IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;green&quot;))),IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;green&quot;))</formula>
        <inlineHelpText>BST - Formula field used to display the submission status. This value is calculated on the number of days passed since the End Date of the visit. This is calculated for Field Sales Calls of type &quot;Pre Planned Call&quot; or &quot;In Service&quot;</inlineHelpText>
        <label>Event Submission Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_Event_1__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Event $ 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BST_Event_2__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Event $ 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BST_Event_Date_1__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Event Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BST_Event_Date_2__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Event Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BST_Event_P1__c</fullName>
        <defaultValue>1</defaultValue>
        <description>BST - This field is used for analytics</description>
        <label>Event P1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_Event_Text_1__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Event Text 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_Event_Text_2__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Event Text 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_Event_Text_3__c</fullName>
        <description>BST - Generic Country Section Field</description>
        <label>Event Text 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_FR_AVIS_CT_REFUS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BST FR - for users under charte medical</description>
        <inlineHelpText>BST FR - for users under charte medical</inlineHelpText>
        <label>Mentions Oblig / Avis CT Refus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BST_FR_AVIS_CT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BST FR - for users under charte medical</description>
        <inlineHelpText>BST FR - for users under charte medical</inlineHelpText>
        <label>Mentions Oblig. / Avis CT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BST_FWP_NXT_CALL__c</fullName>
        <description>&quot;Notes from Previous Call&quot; field will take value from this field during the next event creation of type “Field Sales Call” with the same contact, by the same BOOST user.</description>
        <label>Followup for Next Call</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BST_LABEL_1__c</fullName>
        <formula>&apos;Product Selection&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Label1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_LOCKED__c</fullName>
        <defaultValue>false</defaultValue>
        <description>whenever the status is completed, this field will be marked checked and give no edit permission to the user.</description>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BST_MAIN_TOPIC__c</fullName>
        <description>The main product line/topic to be discussed in the meeting</description>
        <inlineHelpText>The main product line/topic to be discussed in the meeting</inlineHelpText>
        <label>Main Topic</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BST_BAX_SALES_TEAM__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Actifuse</fullName>
                </value>
                <value>
                    <fullName>Acute Catheters</fullName>
                </value>
                <value>
                    <fullName>Acute - Total Therapy (CRRT Therapy)</fullName>
                </value>
                <value>
                    <fullName>Adept</fullName>
                </value>
                <value>
                    <fullName>Advanced Logistics Services</fullName>
                </value>
                <value>
                    <fullName>Amino Acids</fullName>
                </value>
                <value>
                    <fullName>AN69</fullName>
                </value>
                <value>
                    <fullName>Artiss</fullName>
                </value>
                <value>
                    <fullName>B2C SVPS</fullName>
                </value>
                <value>
                    <fullName>Back-Orders Management</fullName>
                </value>
                <value>
                    <fullName>Brevibloc</fullName>
                </value>
                <value>
                    <fullName>Cernevit</fullName>
                </value>
                <value>
                    <fullName>Citrat</fullName>
                    <label>Citrate</label>
                </value>
                <value>
                    <fullName>Clinimix (Dual Chamber Bags)</fullName>
                </value>
                <value>
                    <fullName>Clinoleic (Lipids)</fullName>
                </value>
                <value>
                    <fullName>Colleague Pumps</fullName>
                </value>
                <value>
                    <fullName>Compounding Analgesics</fullName>
                </value>
                <value>
                    <fullName>Compounding - Antibiotics</fullName>
                </value>
                <value>
                    <fullName>Compounding - Oncology</fullName>
                </value>
                <value>
                    <fullName>Compounding - Overall Services</fullName>
                </value>
                <value>
                    <fullName>Coseal</fullName>
                </value>
                <value>
                    <fullName>CWP Units &amp; Consumables</fullName>
                </value>
                <value>
                    <fullName>Cycler - Claria+Sharesource</fullName>
                </value>
                <value>
                    <fullName>Cycler - HomeChoice</fullName>
                </value>
                <value>
                    <fullName>Delivery Terms/Policy/Issues</fullName>
                </value>
                <value>
                    <fullName>Desflurane</fullName>
                </value>
                <value>
                    <fullName>Dexdor</fullName>
                </value>
                <value>
                    <fullName>Docked-Vialmate (Coupling)</fullName>
                </value>
                <value>
                    <fullName>Elastomerics</fullName>
                </value>
                <value>
                    <fullName>Endoxan (Procytox)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_MIN_OUTCOME__c</fullName>
        <defaultValue>$Setup.DefaultEventValues__c.BST_MIN_OUTCOME__c</defaultValue>
        <description>BST Minimum result to be achieved during the call</description>
        <label>Minimum Call Outcome</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BST_MSL_CONF_NOTES__c</fullName>
        <description>Field visible only to MSL . This will be used to store sensitive MSL info that is not to be shared with other teams</description>
        <inlineHelpText>Field visible only to MSL . This will be used to store sensitive MSL info that is not to be shared with other teams</inlineHelpText>
        <label>MSL Confidential Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BST_Medical_Best_Call_Outcome__c</fullName>
        <label>Medical Best Call Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_Medical_Call_Notes__c</fullName>
        <label>Medical Call Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_Medical_Call_Objectives__c</fullName>
        <label>Medical Call Objectives</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_Medical_Minimum_Call_Outcome__c</fullName>
        <label>Medical Minimum Call Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_NOTS_PREV_CALL__c</fullName>
        <description>Auto populated from last meeting of type “Field Sales Call” with the same contact, by the same BOOST user, pick up notes existing in “Follow-up for next call”</description>
        <label>Notes from Previous Call</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BST_NR_CLINICIANS_TRAINED__c</fullName>
        <description>BST - field used to track the number of clinicians trained during Training Event types</description>
        <label>Nr. Of Clinicians Trained</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_NR_NURSES_TRAINED__c</fullName>
        <description>BST - field used to track the number of nurses trained during Training Event types</description>
        <inlineHelpText>BST - field used to track the number of nurses trained during Training Event types</inlineHelpText>
        <label>Nr. Of Nurses Trained</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BST_OUTCOME_STATUS__c</fullName>
        <description>Stores outcome status.</description>
        <label>Outcome Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Advance</fullName>
                </value>
                <value>
                    <fullName>Continuation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to maintain primary contact for each event.</description>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BST_Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BST_Resource_1__c</fullName>
        <label>Resource 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_SEC_PROD_CATH__c</fullName>
        <description>BST - field used to track the Secondary Product Category discussed in a call (if it is the case)</description>
        <inlineHelpText>BST - field used to track the Secondary Product Category discussed in a call (if it is the case)</inlineHelpText>
        <label>Secondary Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BST_COUNTRY__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bax Company/Services</fullName>
                </value>
                <value>
                    <fullName>HC - Anesthesia/Critical Care</fullName>
                </value>
                <value>
                    <fullName>HC - BioSurgery</fullName>
                </value>
                <value>
                    <fullName>HC - Glob.Pharma Injectables</fullName>
                </value>
                <value>
                    <fullName>HC - Infusion Systems</fullName>
                </value>
                <value>
                    <fullName>HC - IV Therapies/SVP</fullName>
                </value>
                <value>
                    <fullName>HC - Nutrition</fullName>
                </value>
                <value>
                    <fullName>HC - Nutrition Pediatrics</fullName>
                </value>
                <value>
                    <fullName>HC - Pharmacy Services</fullName>
                </value>
                <value>
                    <fullName>HC - Productivity Sys</fullName>
                    <isActive>false</isActive>
                    <label>HC - Productivity Sys</label>
                </value>
                <value>
                    <fullName>Market Access</fullName>
                    <isActive>false</isActive>
                    <label>Market Access</label>
                </value>
                <value>
                    <fullName>MSL/Medical</fullName>
                    <isActive>false</isActive>
                    <label>MSL/Medical</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>RE - Acute</fullName>
                </value>
                <value>
                    <fullName>RE - Hemo Dialysis</fullName>
                </value>
                <value>
                    <fullName>RE - Peritoneal Dialysis</fullName>
                </value>
                <value>
                    <fullName>RE - Water Treatment</fullName>
                </value>
                <value>
                    <fullName>Small Volume Parenterals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_SEC_TOPIC__c</fullName>
        <description>BST - field used to register the secondary topics discussed during a call. Value available are dependent on the selection made in &quot;Secondary Product Category&quot; field</description>
        <inlineHelpText>BST - field used to register the secondary topics discussed during a call. Value available are dependent on the selection made in &quot;Secondary Product Category&quot; field</inlineHelpText>
        <label>Secondary Topics</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>BST_SEC_PROD_CATH__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Actifuse</fullName>
                </value>
                <value>
                    <fullName>Acute Catheters</fullName>
                </value>
                <value>
                    <fullName>Acute - Total Therapy</fullName>
                    <isActive>false</isActive>
                    <label>Acute - Total Therapy</label>
                </value>
                <value>
                    <fullName>Acute - Total Therapy (CRRT Therapy)</fullName>
                </value>
                <value>
                    <fullName>Adept</fullName>
                </value>
                <value>
                    <fullName>Advanced Logistics Services</fullName>
                </value>
                <value>
                    <fullName>Amino Acids</fullName>
                </value>
                <value>
                    <fullName>AN69</fullName>
                </value>
                <value>
                    <fullName>Artiss</fullName>
                </value>
                <value>
                    <fullName>B2C SVPS</fullName>
                </value>
                <value>
                    <fullName>Back-Orders Management</fullName>
                </value>
                <value>
                    <fullName>Brevibloc</fullName>
                </value>
                <value>
                    <fullName>Cernevit</fullName>
                </value>
                <value>
                    <fullName>Citrat</fullName>
                    <label>Citrate</label>
                </value>
                <value>
                    <fullName>Clinimix</fullName>
                    <isActive>false</isActive>
                    <label>Clinimix</label>
                </value>
                <value>
                    <fullName>Clinimix (Dual Chamber Bags)</fullName>
                </value>
                <value>
                    <fullName>Clinoleic</fullName>
                    <isActive>false</isActive>
                    <label>Clinoleic</label>
                </value>
                <value>
                    <fullName>Clinoleic (Lipids)</fullName>
                </value>
                <value>
                    <fullName>Colleague Pumps</fullName>
                </value>
                <value>
                    <fullName>Compounding Analgesics</fullName>
                </value>
                <value>
                    <fullName>Compounding - Antibiotics</fullName>
                </value>
                <value>
                    <fullName>Compounding - Onco</fullName>
                    <isActive>false</isActive>
                    <label>Compounding - Onco</label>
                </value>
                <value>
                    <fullName>Compounding - Oncology</fullName>
                </value>
                <value>
                    <fullName>Compounding - Overall Services</fullName>
                </value>
                <value>
                    <fullName>Coseal</fullName>
                </value>
                <value>
                    <fullName>CWP Units &amp; Consumables</fullName>
                </value>
                <value>
                    <fullName>Cycler - Claria+Sharesource</fullName>
                </value>
                <value>
                    <fullName>Cycler - HomeChoice</fullName>
                </value>
                <value>
                    <fullName>Delivery Terms/Policy/Issues</fullName>
                </value>
                <value>
                    <fullName>Desflurane</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>